# arangodb-mesos

./: .gitignore  COMPILING.md  Dockerfile  Makefile.am  NOTES  OPEN_ISSUES  README.md  configure.ac  ignoreOffers.txt
assets/: Gruntfile.js  MusicStore.json  Servers-MusicStore.json  Servers-Test.json  Servers-Videos.json  Videos.json  cluster.json  index.html  style.scss
assets/css/: bootstrap.scss
assets/html/: body.html.part  head.html.part  scripts.html.part
assets/js/routers/: mesosRouter.js  startApp.js
assets/js/templates/: clusterView.ejs  dashboardView.ejs  debugView.ejs  debugView2.ejs  footerView.ejs  modalBase.ejs  navigationView.ejs  testView.ejs
assets/js/views/: clusterView.js  dashboardView.js  debugView.js  footerView.js  navigationView.js  testView.js
assets/scss/: _buttons.scss  _cluster.scss  _keyValue.scss  _layout.scss  _margins.scss  generated-scss.css  style.scss
src/: ArangoManager.cpp  ArangoManager.h  ArangoScheduler.cpp  ArangoScheduler.h  ArangoState.cpp  ArangoState.h  Caretaker.cpp  Caretaker.h  CaretakerCluster.cpp  CaretakerCluster.h  CaretakerReplication.cpp  CaretakerReplication.h  CaretakerStandalone.cpp  CaretakerStandalone.h  DatabaseManager.cpp  Global.cpp  Global.h  HttpServer.cpp  HttpServer.h  RESERVATION.md  ResourceManager.h  arangodb.pb.cc  arangodb.pb.h  arangodb.proto  executor.cpp  framework.cpp  utils.cpp  utils.h
src/graveyard/: DatabaseManager.h
tst/: res.cpp
